--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
   "devDependencies": {
     "@playwright/test": "^1.44.1",
     "@types/node": "^20.13.0"
+  },
+  "type": "module",
+  "dependencies": {
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
+    "playwright": "^1.44.1",
+    "typescript": "^5.4.5"
   }
 }
